rust/windows_module/check_failure.txt
    Checking windows_module v0.1.0 (/root/aios/rust/windows_module)
error[E0433]: failed to resolve: could not find `main` in the crate root
 --> windows_module/src/core/windows_main.rs:3:12
  |
3 | ...ate::main::windows...
  |         ^^^^ could not find `main` in the crate root

error[E0433]: failed to resolve: could not find `main` in the crate root
 --> windows_module/src/core/windows_main.rs:4:12
  |
4 | ...ate::main::windows...
  |         ^^^^ could not find `main` in the crate root

warning: unused import: `std::io`
 --> windows_module/src/translation/windows_cache_manager.rs:5:5
  |
5 | use std::io;
  |     ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0560]: struct `WindowsLnnPredictor` has no field named `tau`
  --> windows_module/src/assistant/windows_lnn_predictor.rs:35:13
   |
35 |             tau: 0.5,
   |             ^^^ unknown field
   |
help: a field with a similar name exists
   |
35 |             _tau: 0.5,
   |             +

Some errors have detailed explanations: E0433, E0560.
For more information about an error, try `rustc --explain E0433`.
warning: `windows_module` (lib) generated 1 warning
error: could not compile `windows_module` (lib) due to 3 previous errors; 1 warning emitted
